@@ -4,15 +4,20 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.voovan</groupId>
-    <artifactId>template</artifactId>
+    <groupId>org.clash</groupId>
+    <artifactId>clash-config</artifactId>
     <version>1.0</version>
 
     <dependencies>
         <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>2.0</version>
+        </dependency>
+        <dependency>
             <groupId>com.github.helyho</groupId>
             <artifactId>Voovan</artifactId>
-            <version>5d8bd4d59d</version>
+            <version>3c0ed2f15b</version>
         </dependency>
     </dependencies>
 
@@ -20,15 +25,17 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <!-- 执行的类定义 -->
         <project.main.class>org.clash.config.App</project.main.class>
+        <project.package.name>app</project.package.name>
+        <project.package.status>release</project.package.status>
     </properties>
 
     <build>
         <plugins>
-           <plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version>
                 <configuration>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
@@ -37,19 +44,21 @@
                         <arg>java.base/jdk.internal.module=ALL-UNNAMED</arg>
                     </compilerArgs>
                 </configuration>
-			</plugin>            
-			<plugin>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
                     <archive>
+                        <!-- 配置 manifest 信息 -->
                         <manifest>
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>lib/</classpathPrefix>
                             <mainClass>${project.main.class}</mainClass>
                         </manifest>
                         <manifestEntries>
-                            <Class-Path>conf</Class-Path>
+                            <Class-Path>classes</Class-Path>
+                            <Add-Opens>java.base/jdk.internal.module</Add-Opens>
                         </manifestEntries>
                     </archive>
                 </configuration>
@@ -57,7 +66,8 @@
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
-                    <finalName>clashconfig</finalName>
+                    <!-- <appendAssemblyId>false</appendAssemblyId> -->
+                    <finalName>${project.name}</finalName>
                     <descriptors>
                         <descriptor>assembly.xml</descriptor>
                     </descriptors>
@@ -74,6 +84,8 @@
 
             </plugin>
         </plugins>
+        <!-- 最终打包的jar 文件名称, 需要与 assembly.xml中的同步 -->
+        <finalName>${project.package.name}</finalName>
     </build>
     <repositories>
         <repository>
